<resources>
    <string name="app_name">App Story Dicoding</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Disini tempatnya anda berekspresi, saling berbagi cerita, hingga berbagi informasi terbaru dengan orang lain, hanya di App Story Dicoding.</string>
    <string name="title_welcome_page">Selamat datang di App Story Dicoding!</string>
    <string name="title_signup_page">Belum memiliki akun? Silahkan daftar terlebih dahulu.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan data yang sesuai.</string>
    <string name="title_login_page">Kamu sudah memiliki akun? Silahkan Login terlebih dahulu</string>
    <string name="name">Nama</string>
    <string name="image_desc">Login Image</string>
    <string name="sign_up_image_desc">Sign Up</string>
    <string name="welcome_image_desc">Welcome User</string>
    <string name="tgl_dummy">8 Januari 2024</string>
    <string name="name_dummy">Name Placeholder</string>
    <string name="description_dummy">Description Placeholder</string>
    <string name="password_hint">********</string>
    <string name="email_hint">example@domain.com</string>
    <string name="desc">silahkan ketik...</string>
    <string name="choose_image">Ambil Gambar Dari</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="upload_story">Upload Story</string>
    <string name="preview_image">Preview Image</string>
    <string name="tambah_story">Tambah Story</string>
    <string name="logout">Logout</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="maps_stories">Maps Stories</string>
    <string name="coba_lagi">Coba lagi</string>

</resources>