<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/add_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/baseline_image_24"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/progressIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/bg_edit_text"
            android:gravity="start|top"
            android:hint="@string/desc"
            android:padding="8dp"
            android:textSize="16sp"
            android:textColor="#333333"
            android:textColorHint="#888888"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/add_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/choose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:text="@string/choose_image"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/add_gallery"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            app:layout_constraintTop_toBottomOf="@id/choose"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/add_camera"
            />

        <Button
            android:id="@+id/add_camera"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            app:layout_constraintTop_toBottomOf="@id/choose"
            app:layout_constraintStart_toEndOf="@id/add_gallery"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/upload_story"
            android:layout_margin="15dp"
            app:layout_constraintTop_toBottomOf="@id/add_camera"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>