<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Foto -->
        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/name_dummy"
            android:background="@android:color/darker_gray" />

        <!-- Overlay for date -->
        <TextView
            android:id="@+id/tv_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:padding="8dp"
            android:background="@drawable/overlay_background"
            android:text="@string/tgl_dummy"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="-48dp"
            android:layout_marginStart="8dp"/>

        <!-- name & description -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_dummy"
                android:textColor="?attr/colorOnPrimary"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_dummy"
                android:textColor="@android:color/darker_gray"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_marginTop="4dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
